starting meli_crawler and add comment one file_typ

--- a/codes/file_types.ipynb
+++ b/codes/file_types.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Target\n",
+    "\n",
+    "The main goal of this notebook is exercise two different file types (CSV and Parquet) and exercise the read, write and transform data process using Spark."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
