--- a/pipelines/meli_crawler/meli_crawler.ipynb
+++ b/pipelines/meli_crawler/meli_crawler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "str"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,18 +83,19 @@
     "    \"\"\"\n",
     "        Return the price of products from tags\n",
     "    \"\"\"\n",
-    "    price_tags = doc.find_all('span',class_='andes-money-amount__fraction')\n",
     "    prices = []\n",
     "\n",
-    "    for tags in price_tags:\n",
-    "        prices.append(tags.text)\n",
+    "    price_parent_tags = doc.find_all('span',class_='andes-money-amount andes-money-amount--cents-superscript')\n",
+    "    \n",
+    "    for child in price_parent_tags: \n",
+    "        prices.append(child.find('span',class_='andes-money-amount__fraction').text)\n",
     "\n",
     "    return prices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,12 +132,13 @@
     "        'PRICE': prices\n",
     "    }\n",
     "\n",
-    "    return pd.DataFrame.from_dict(items,orient='index').transpose()"
+    "    # return pd.DataFrame.from_dict(items,orient='index').transpose()\n",
+    "    return pd.DataFrame(items)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -167,28 +169,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Motorola Moto G04 Grafite 128gb Dual Sim 4gb R...</td>\n",
-       "      <td>699</td>\n",
+       "      <td>Samsung Galaxy A15 4G Dual SIM 128 GB Azul cla...</td>\n",
+       "      <td>879</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Samsung Smart Tv 43  Crystal Uhd 4k 43du8000 2024</td>\n",
-       "      <td>849</td>\n",
+       "      <td>Console Sony PlayStation 5 Standard Edition 825GB</td>\n",
+       "      <td>3.543</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Geladeira frost free Electrolux DFN41 branca c...</td>\n",
-       "      <td>1.815</td>\n",
+       "      <td>Kit Com 5 Camisetas Masculinas Básicas Hering</td>\n",
+       "      <td>127</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Notebook Dell Inspiron I15-i120k-a30pf I5 16gb...</td>\n",
-       "      <td>2.199</td>\n",
+       "      <td>Smart Tv LG 50 Led 4k Uhd Wi-fi Bluetooth Hdr1...</td>\n",
+       "      <td>2.129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Loção hidratante Cerave Com Ácido Hialurônico ...</td>\n",
-       "      <td>2.699</td>\n",
+       "      <td>Gel De Limpeza Facial Effaclar Concentrado 300...</td>\n",
+       "      <td>65</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -196,14 +198,14 @@
       ],
       "text/plain": [
        "                                               TITLE  PRICE\n",
-       "0  Motorola Moto G04 Grafite 128gb Dual Sim 4gb R...    699\n",
-       "1  Samsung Smart Tv 43  Crystal Uhd 4k 43du8000 2024    849\n",
-       "2  Geladeira frost free Electrolux DFN41 branca c...  1.815\n",
-       "3  Notebook Dell Inspiron I15-i120k-a30pf I5 16gb...  2.199\n",
-       "4  Loção hidratante Cerave Com Ácido Hialurônico ...  2.699"
+       "0  Samsung Galaxy A15 4G Dual SIM 128 GB Azul cla...    879\n",
+       "1  Console Sony PlayStation 5 Standard Edition 825GB  3.543\n",
+       "2     Kit Com 5 Camisetas Masculinas Básicas Hering     127\n",
+       "3  Smart Tv LG 50 Led 4k Uhd Wi-fi Bluetooth Hdr1...  2.129\n",
+       "4  Gel De Limpeza Facial Effaclar Concentrado 300...     65"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./data/mercado_livre.csv\")"
+    "df.to_csv(\"./data/mercado_livre.csv\",mode='w',index=False)"
    ]
   }
  ],
